syntax="proto3";

option java_multiple_files=true;
option java_package = "com.davidmwangi.models";

//request
message BalanceCheckRequest{
  int32  account_number = 1;
}

//USD
//response
message Balance {
  int32 amount = 1;
}

service BankService{
  rpc getBalance(BalanceCheckRequest) returns (Balance);
}